objects/Approval_Response__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who entered the accepted or rejected response.</description>
        <inlineHelpText>The user who entered the accepted or rejected response.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRF_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))+ Benefit_Request_Form__r.Id, 'Open Record')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The BRF that will be approved or rejected.</description>
        <inlineHelpText>The BRF that will be approved or rejected.</inlineHelpText>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Approval Responses</relationshipLabel>
        <relationshipName>Approval_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>The name of the business area that will provide the response.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the business area that will provide the response.</inlineHelpText>
        <label>Business Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments related to the response.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments related to the response.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_custom_date__c</fullName>
        <formula>DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created custom date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve__c</fullName>
        <description>The number of days it took to get the approver to respond.</description>
        <formula>If(ISBLANK(Response_Date__c), Today() - DATEVALUE(CreatedDate), Response_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days it took to get the approver to respond.</inlineHelpText>
        <label>Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>The day the response was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The day the response was submitted.</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>The response for the approval.</description>
        <inlineHelpText>The response for the approval.</inlineHelpText>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object represents responses for a record approval.</description>
    <label>Approval Response</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Approval Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Responses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AP0001</fullName>
        <active>true</active>
        <description>If the response is Rejected then make sure they enter a reason in the Comments field.</description>
        <errorConditionFormula>ISPICKVAL(Response__c, 'Reject') &amp;&amp; (ISNULL(Comments__c) || ISBLANK(Comments__c))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please enter a comment for the rejected response</errorMessage>
    </validationRules>
</CustomObject>